# Transcribe

./: .gitignore  DESIGN.md  GEMINI.md  README.md  convert_pcm.py  pyproject.toml
src/transcribe/: cli.py  core.py  gui.py  summarize.py  text_utils.py
src/transcribe/audio/: recorder.py  vad.py
src/transcribe/model/: model.py
tests/: test_cli.py  test_model.py  test_text_utils.py  test_vad.py
